Transform terminology from 'Software Lifecycle Maturity Assessment' to 'Capability Maturity Assessment'
- Update main application title in Homepage.js
- Update README.md title to 'Comprehensive Capability Maturity Dashboard'
- Update HTML page title and meta description for SEO consistency
- Update PWA manifest.json app names for capability maturity branding
- Update MaturityDashboard.js labels for consistency
- Update DeployPage.js DevOps reference to capability maturity terminology
- Fix all test files to expect new terminology (App.test.js, Homepage.test.js, MaturityDashboard.test.js)
- Rewrite DevelopPage.test.js to reflect current assessment structure
- All 38 tests passing with no functionality regressions
- Complete rebrand maintains professional consistency across entire application

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="theme-color" content="#2F48C4" />
   <meta name="description"
-    content="Maturity Portfolio Manager - Comprehensive maturity assessment across software development lifecycle phases" />
+    content="Capability Maturity Portfolio Manager - Comprehensive capability maturity assessment across software development phases" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/sk-logo.png" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -23,7 +23,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Maturity Portfolio Manager</title>
+  <title>Capability Maturity Portfolio Manager</title>
 </head>
 
 <body>
